<resources>
    <string name="app_name">Assignment_03</string>
    <string name="app_title">Discount Calculator</string>
    <string name="list_price">Item Price:</string>
    <string name="list_price_hint">Enter List Price</string>
    <string name="radio_title">Sale %</string>
    <string name="ten_percent">10%</string>
    <string name="fifteen_percent">15%</string>
    <string name="eighteen_percent">18%</string>
    <string name="custom_percent">Custom</string>
    <string name="seekbar_title">Custom %:</string>
    <string name="seekbar_value">25%</string>
    <string name="discount_title">Discount:</string>
    <string name="discount_value">0.00</string>
    <string name="final_title">Final Price:</string>
    <string name="final_value">0.00</string>
    <string name="reset_button">Reset</string>
    <string name="calculate_button">Calculate</string>
</resources>